force-app/main/default/objects/Position__c/fields/Closed_at__c.field-meta.xml
<CustomField>
    <fullName>Closed_at__c</fullName>
    <label>Closed at</label>
    <type>Date</type>
</CustomField>