force-app/main/default/objects/Position__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Without experience</fullName>
            </value>
            <value>
                <fullName>Less 1 year</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2-3 years</fullName>
            </value>
            <value>
                <fullName>More 3 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>