force-app/main/default/objects/Position__c/fields/Max_salary__c.field-meta.xml
<CustomField>
    <fullName>Max_salary__c</fullName>
    <label>Max salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>