force-app/main/default/objects/Position__c/fields/Min_salary__c.field-meta.xml
<CustomField>
    <fullName>Min_salary__c</fullName>
    <label>Min salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>