force-app/main/default/objects/Position__c/fields/Opened_at__c.field-meta.xml
<CustomField>
    <fullName>Opened_at__c</fullName>
    <label>Opened at</label>
    <required>true</required>
    <type>Date</type>
</CustomField>