force-app/main/default/objects/Position__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>JS</fullName>
            </value>
            <value>
                <fullName>Apex Triggers</fullName>
            </value>
            <value>
                <fullName>Asynchronous Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>SOQL/SOSL</fullName>
            </value>
            <value>
                <fullName>Custom App/Custom Object</fullName>
            </value>
            <value>
                <fullName>Flows</fullName>
            </value>
            <value>
                <fullName>OWD</fullName>
            </value>
            <value>
                <fullName>Excell</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>Groove</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>