force-app/main/default/objects/Position__c/recordTypes/Admin_position.recordType-meta.xml
<RecordType>
    <fullName>Admin_position</fullName>
    <active>true</active>
    <label>Admin position</label>
</RecordType>