force-app/main/default/objects/Position__c/recordTypes/Tech_position.recordType-meta.xml
<RecordType>
    <fullName>Tech_position</fullName>
    <active>true</active>
    <label>Tech position</label>
</RecordType>