force-app/main/default/objects/Position__c/validationRules/Max_Min_salary_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Min_salary_validation</fullName>
    <active>true</active>
    <description>Max salary cant be less then min salary</description>
    <errorConditionFormula>Max_salary__c  &lt;  Min_salary__c</errorConditionFormula>
    <errorDisplayField>Max_salary__c</errorDisplayField>
    <errorMessage>Max salary cant be less then min salary</errorMessage>
</ValidationRule>