force-app/main/default/objects/Position__c/validationRules/Validate_opened_closed_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_opened_closed_date</fullName>
    <active>true</active>
    <description>Closed date cant be less then opened date</description>
    <errorConditionFormula>Opened_at__c  &gt;  Closed_at__c</errorConditionFormula>
    <errorDisplayField>Closed_at__c</errorDisplayField>
    <errorMessage>Closed date cant be less then opened date</errorMessage>
</ValidationRule>