force-app/main/default/objects/Position__c/listViews/Positions_LW.listView-meta.xml
<ListView>
    <fullName>Positions_LW</fullName>
    <columns>NAME</columns>
    <columns>Opened_at__c</columns>
    <columns>Closed_at__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Opened</value>
    </filters>
    <label>Opened positions</label>
</ListView>